manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-go
  template:
    metadata:
      labels:
        app: demo-go
    spec:
      containers:
      - name: demo-go
        image: ghcr.io/azratul/test-actions/demo-go:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-go-service
spec:
  type: NodePort
  selector:
    app: demo-go
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
