manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-actions
spec:
  selector:
    app: test-actions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
